Criação de variaveis, fonts e etc

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,8 +1,9 @@
 /* Background-colors */
-$bg-primary: #fff;
-$bg-secondary: #fff;
+$bg-primary: #424242;
+$bg-secondary: #e2127A;
 
 /* Colors */
-$primary-color: #fff;
-$secondary-color: #fff;
-$tertiary-color: #fff;
+$primary-color: #424242;
+$secondary-color: #e2127A;
+$tertiary-color: #ffffff;
+$quaternary-color: #0066CC;
