Criação de pages e organização de rotas

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header>IMG</header>
+<!-- <header>IMG</header> -->
 <nav class="navbar navbar-expand-sm bg-navbar navbar-dark">
   <button
     class="navbar-toggler d-lg-none float-right mt-2"
