--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@
 html {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 10px;
-  background-color: $bg-primary;
+  background-color: $bg-secondary;
 }
