--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import '~src/assets/css/reset';
 @import '~src/assets/css/variables';
 
-html {
+html, body {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 10px;
   background-color: $bg-secondary;
