Correções diversas, login funcional com token no localstorage, necessidade de validações no r e

--- a/src/app/pages/admin/login/login.component.html
+++ b/src/app/pages/admin/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div>
+  <form [formGroup]="loginForm">
+    <input
+      type="text"
+      formControlName="email"
+      placeholder="Digite seu email"
+    />
+    <input
+      type="password"
+      formControlName="password"
+      placeholder="Digite sua senha"
+    />
+  </form>
+  <button (click)="entrar()">Entrar</button>
+</div>
