--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -7,3 +7,10 @@ $primary-color: #424242;
 $secondary-color: #e2127A;
 $tertiary-color: #ffffff;
 $quaternary-color: #0066CC;
+
+/* Hover/Active */
+$secondary-hover-color: rgb(214, 10, 146);
+$tertiary-hover-color: #e9e9e9;
+
+/* disabled */
+$disabled-color: rgb(199, 199, 199);
