--- a/src/app/pages/admin/register/register.component.html
+++ b/src/app/pages/admin/register/register.component.html
@@ -1,2 +1,64 @@
 <app-header></app-header>
-<p>register works!</p>
+<mat-card class="bg-light container-fluid card shadow" style="margin-top: 75px">
+  <mat-card-header class="d-flex justify-content-center">
+    <mat-card-title>
+      <h1>Cadastro</h1>
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div>
+      <form [formGroup]="registerForm">
+        <div class="form-group">
+          <label for="email"><b>E-mail</b></label>
+          <input
+            type="email"
+            class="form-control"
+            aria-describedby="helpId"
+            type="text"
+            formControlName="email"
+            placeholder="Digite seu email"
+          />
+          <p *ngIf="(registerForm.get('email')?.hasError('required') || registerForm.get('email')?.hasError('email')) && registerForm.controls['email']?.touched">Favor digitar um e-mail válido!</p>
+          <br />
+          <label for="password"><b>Nome</b></label>
+          <input
+            type="text"
+            class="form-control"
+            aria-describedby="helpId"
+            formControlName="firstName"
+            placeholder="Digite sua senha"
+          />
+          <p *ngIf="registerForm.get('firstName')?.hasError('required') && registerForm.controls['firstName']?.touched">Favor digitar o seu nome!</p>
+          <label for="email"><b>Sobrenome</b></label>
+          <input
+            type="text"
+            class="form-control"
+            aria-describedby="helpId"
+            type="text"
+            formControlName="lastName"
+            placeholder="Digite seu sobrenome"
+          />
+          <p *ngIf="registerForm.get('lastName')?.hasError('required') && registerForm.controls['lastName']?.touched">Favor digitar o seu sobrenome!</p>
+          <br />
+          <label for="password"><b>Senha</b></label>
+          <input
+            type="password"
+            class="form-control"
+            aria-describedby="helpId"
+            formControlName="password"
+            placeholder="Digite sua senha"
+          />
+          <p *ngIf="registerForm.get('password')?.hasError('required') && registerForm.controls['password']?.touched">Campo senha obrigatório!</p>
+        </div>
+      </form>
+      <app-button
+        class="d-flex justify-content-center"
+        title="Cadastrar"
+        type="primary"
+        size="medium"
+        (click)="register()"
+      ></app-button>
+      <br>
+    </div>
+  </mat-card-content>
+</mat-card>
