Alteração para Authorization token, listagem de categorias, criação de models e novos components para funcionalidades de categorias e artigos

--- a/src/app/pages/admin/category/list-categories/list-categories.component.html
+++ b/src/app/pages/admin/category/list-categories/list-categories.component.html
@@ -1,1 +1,6 @@
-<p>list-categories works!</p>
+<app-header></app-header>
+<div *ngFor="let item of listCategories">
+  {{ item.id }}
+  {{ item.title }}
+  {{ item.slug }}
+</div>
