--- a/src/app/pages/admin/category/form-category/form-category.component.html
+++ b/src/app/pages/admin/category/form-category/form-category.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <mat-card class="bg-light container-fluid card shadow" style="margin-top: 75px">
   <mat-card-header class="d-flex justify-content-center">
     <mat-card-title>
