Alterações em categories

--- a/src/app/pages/admin/category/form-category/form-category.component.html
+++ b/src/app/pages/admin/category/form-category/form-category.component.html
@@ -25,13 +25,13 @@
           >
             Favor digitar o nome da nova categoria!
           </p>
-          <br>
+          <br />
           <app-button
             class="d-flex justify-content-center"
             title="Salvar"
             type="primary"
             size="medium"
-            (click)="register()"
+            (click)="createCategory()"
           ></app-button>
         </div>
         <br />
@@ -39,4 +39,3 @@
     </div>
   </mat-card-content>
 </mat-card>
-
