--- a/src/app/pages/admin/category/list-categories/list-categories.component.scss
+++ b/src/app/pages/admin/category/list-categories/list-categories.component.scss
@@ -1,25 +1,11 @@
+@import "../../../../../assets/css/variables.scss";
+
 table {
   font-size: 1.3rem;
 }
 
 h1 {
-  font-size: 2.0rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
-mat-card {
-  margin-top: 65px;
-}
-
-@media (max-width: 575px) {
-  mat-card {
-    max-width: 100%;
-    border: 1px solid transparent;
-  }
-}
-
-@media (min-width: 576px) {
-  mat-card {
-    max-width: 75%;
-  }
-}
