Correções e criação de services e components, além de correção de estilização

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="bg-light main container-fluid p-0 pb-4">
-  <nav class="bg-light mt-4">
+  <nav class="bg-light">
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a
         class="nav-link active"
@@ -39,7 +39,7 @@
       role="tabpanel"
       aria-labelledby="nav-profile-tab"
     >
-      ...
+    <app-list-articles></app-list-articles>
     </div>
   </div>
 </div>
