--- a/src/app/pages/admin/article/form-article/form-article.component.html
+++ b/src/app/pages/admin/article/form-article/form-article.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<p>form-article works!</p>
+
+<mat-card class="bg-light w-75 container-fluid mt-5">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt recusandae fugit amet! Officia laudantium adipisci suscipit, voluptas odit eligendi facilis vero fugit quis at impedit ex illum beatae. Iusto, veritatis!
+</mat-card>
+
