--- a/src/app/pages/admin/article/list-articles/list-articles.component.html
+++ b/src/app/pages/admin/article/list-articles/list-articles.component.html
@@ -1,2 +1,48 @@
-<app-header></app-header>
-<p>list-articles works!</p>
+<div>
+  <mat-card class="bg-light container-fluid">
+    <mat-card-header>
+      <mat-card-title>
+        <app-button
+          title="Novo Artigo"
+          type="primary"
+          size="small"
+          [routerLink]="['/admin/panel-control/article/new']"
+        ></app-button>
+      </mat-card-title>
+    </mat-card-header>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>TÍTULO</th>
+          <th>SLUG</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>
+            <app-button
+              class="d-flex justify-content-center"
+              title="Editar"
+              type="primary"
+              size="small"
+            ></app-button>
+          </td>
+          <td>
+            <app-button
+              class="d-flex justify-content-center"
+              title="Excluir"
+              type="secondary"
+              size="small"
+            ></app-button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </mat-card>
+</div>
