--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="bg-light main container-fluid p-0 pb-4">
+<div class="bg-light main container-fluid p-0 pb-4 shadow">
   <nav class="bg-light">
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a
