--- a/src/app/pages/admin/article/form-article/form-article.component.html
+++ b/src/app/pages/admin/article/form-article/form-article.component.html
@@ -1,6 +1,40 @@
 <app-header></app-header>
 
 <mat-card class="bg-light w-75 container-fluid mt-5">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt recusandae fugit amet! Officia laudantium adipisci suscipit, voluptas odit eligendi facilis vero fugit quis at impedit ex illum beatae. Iusto, veritatis!
+  <br>
+<div class="form-group">
+  <label for=""><h1>Título:</h1></label>
+  <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="Digite o título do artigo">
+</div>
 </mat-card>
 
+<mat-card class="bg-light w-75 container-fluid mt-5">
+
+  <editor
+  initialValue="Escreva seu artigo aqui."
+  apiKey="51ltykau1m4rzm79j9kefwxyat167fwatnpx3loleiewq8jz"
+  [init]="{
+    height: 300,
+    menubar: true,
+    plugins: [
+      'advlist autolink lists link image charmap print',
+      'preview anchor searchreplace visualblocks code',
+      'fullscreen insertdatetime media table paste',
+      'help wordcount'
+    ],
+    toolbar:
+      'undo redo | formatselect | bold italic | \
+      alignleft aligncenter alignright alignjustify | \
+      bullist numlist outdent indent | help'
+  }"
+>
+</editor>
+</mat-card>
+<mat-card class="bg-light w-75 container-fluid mt-5">
+  <br>
+<div class="form-group">
+  <label for=""><h1>Categoria:</h1></label>
+  <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="Selecione uma categoria para o seu artigo">
+</div>
+</mat-card>
+<br>
