Criação/Edição de artigos funcional, organização de import e codigo, estilização

--- a/src/app/pages/admin/article/edit-article/edit-article.component.html
+++ b/src/app/pages/admin/article/edit-article/edit-article.component.html
@@ -12,7 +12,8 @@
           id=""
           formControlName="title"
           aria-describedby="helpId"
-          placeholder="Digite o título do artigo"
+          placeholder="Digite o novo título do artigo"
+          value="{{ article?.title }}"
         />
         <p
           *ngIf="
@@ -20,14 +21,14 @@
             articleForm.controls['title']?.touched
           "
         >
-          Favor digitar o nome da nova categoria!
+          Favor digitar o novo título do artigo!
         </p>
       </div>
     </mat-card>
 
     <mat-card>
       <editor
-        initialValue="Escreva seu artigo aqui."
+        initialValue="{{ article?.body }}"
         apiKey="51ltykau1m4rzm79j9kefwxyat167fwatnpx3loleiewq8jz"
         formControlName="body"
         [init]="{
@@ -52,11 +53,10 @@
           articleForm.controls['body']?.touched
         "
       >
-        Favor digitar o nome da nova categoria!
+        Favor reescreva o seu artigo!
       </p>
     </mat-card>
     <mat-card>
-      <br />
       <div class="form-group">
         <label for=""><h1>Categoria:</h1></label>
         <select
@@ -80,14 +80,14 @@
           articleForm.controls['category']?.touched
         "
       >
-        Favor digitar o nome da nova categoria!
+        Favor selecionar uma categoria!
       </p>
       <br />
       <app-button
-        title="Publicar"
+        title="Salvar"
         type="primary"
         size="small"
-        (click)="createArticle()"
+        (click)="editArticle()"
       ></app-button>
     </mat-card>
   </form>
