--- a/src/app/pages/admin/article/form-article/form-article.component.html
+++ b/src/app/pages/admin/article/form-article/form-article.component.html
@@ -20,7 +20,7 @@
             articleForm.controls['title']?.touched
           "
         >
-          Favor digitar o nome da nova categoria!
+          Favor digitar o título do artigo!
         </p>
       </div>
     </mat-card>
@@ -52,11 +52,10 @@
           articleForm.controls['body']?.touched
         "
       >
-        Favor digitar o nome da nova categoria!
+        Favor escreva seu artigo!
       </p>
     </mat-card>
     <mat-card>
-      <br />
       <div class="form-group">
         <label for=""><h1>Categoria:</h1></label>
         <select
@@ -80,7 +79,7 @@
           articleForm.controls['category']?.touched
         "
       >
-        Favor digitar o nome da nova categoria!
+        Favor selecionar uma categoria para o artigo!
       </p>
       <br />
       <app-button
