--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<app-card></app-card>
+<app-card>
+  <!-- <div *ngFor="let item of listArticles">
+<div [innerHtml]="item.body"></div>
+</div> -->
+</app-card>
