--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -15,6 +15,9 @@ button {
   border-bottom-right-radius: 24px;
   box-shadow: 0px 10px 12px -7px $primary-color;
   text-shadow: 0px 1px 0px $tertiary-color;
+  cursor: pointer;
+  border: none;
+  outline: none;
 
   &.primary {
     color: #fff;
@@ -40,12 +43,17 @@ button {
     outline: none;
   }
 
+  &:focus {
+    color: $secondary-color;
+  }
+
   &.disabled {
     color: $disabled-color;
     border: 1px solid disabled-color;
     background: linear-gradient($tertiary-hover-color, $tertiary-color);
   }
 }
+
 .small {
   width: 100px;
 }
