--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -3,7 +3,7 @@
   <nav class="bg-light">
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a
-        class="nav-link active"
+        class="nav-link active pt-3"
         id="nav-home-tab"
         data-toggle="tab"
         href="#nav-home"
@@ -13,7 +13,7 @@
         >Categorias</a
       >
       <a
-        class="nav-link"
+        class="nav-link pt-3"
         id="nav-profile-tab"
         data-toggle="tab"
         href="#nav-profile"
