--- a/src/app/pages/admin/article/list-articles/list-articles.component.html
+++ b/src/app/pages/admin/article/list-articles/list-articles.component.html
@@ -6,8 +6,8 @@
       size="small"
       [routerLink]="['/admin/panel-control/article/new']"
     ></app-button>
-    <br />
-    <table class="table">
+    <br>
+    <table class="table mt-1">
       <thead>
         <tr>
           <th>ID</th>
