--- a/src/app/pages/admin/category/list-categories/list-categories.component.html
+++ b/src/app/pages/admin/category/list-categories/list-categories.component.html
@@ -7,7 +7,7 @@
       [routerLink]="['/admin/panel-control/category/new']"
     ></app-button>
     <br />
-    <table class="table">
+    <table class="table mt-1">
       <thead>
         <tr>
           <th>ID</th>
