--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -3,6 +3,6 @@
   <h1>Categorias</h1>
   <br>
   <ul>
-    <li><b>- </b><a (click)="categorySlug(category.slug)"> {{ category.slug }}</a></li>
+    <li><b>- </b><a (click)="categorySlug(category.id)"> {{ category.slug }}</a></li>
   </ul>
 </mat-card>
