Criação de pipe para para renderizderizar o html do artigo, novos services e etc

--- a/src/app/pages/admin/article/form-article/form-article.component.html
+++ b/src/app/pages/admin/article/form-article/form-article.component.html
@@ -34,15 +34,10 @@
           height: 300,
           menubar: true,
           plugins: [
-            'advlist autolink lists link image charmap print',
-            'preview anchor searchreplace visualblocks code',
-            'fullscreen insertdatetime media table paste',
-            'help wordcount'
+          'print searchreplace autolink directionality visualblocks visualchars image imagetools link media codesample table charmap hr pagebreak nonbreaking advlist lists textcolor wordcount contextmenu colorpicker textpattern emoticons'
           ],
           toolbar:
-            'undo redo | formatselect | bold italic | \
-        alignleft aligncenter alignright alignjustify | \
-        bullist numlist outdent indent | help'
+          'formatselect | fontsizeselect | fontselect | bold italic strikethrough forecolor backcolor | link | alignleft aligncenter alignright alignjustify  | numlist bullist outdent indent  | removeformat emoticons'
         }"
       >
       </editor>
