Esboço de estilização de apresentação de artigos

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<p>about works!</p>
+<br>
+<mat-card
+class="bg-light article w-75 container-fluid mt-3"
+>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, porro eveniet dolorem hic ut ratione ad nisi, voluptates praesentium aspernatur facere quae ab. Tenetur laudantium ex, officia totam laboriosam amet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos id omnis tenetur asperiores, rem sapiente modi ipsum beatae debitis hic cumque ea excepturi dolorum minima est quae iusto inventore libero.
+</mat-card>
