--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,23 @@
 <app-header></app-header>
 
-<mat-card class="w-75 container-fluid mt-5"  *ngFor="let article of listArticles">
+<div style="padding-top: 40px">
+
+  <mat-card
+  class="bg-light article container-fluid mt-3"
+  *ngFor="let article of listArticles"
+>
   <div>
-    <div class="card">
-      {{ article.title }}
-      <br>
-      <br>
-      <div [innerHtml]="article.body | safeHtml">
-      </div>
-    </div>
+    <h1>{{ article.title }}</h1>
+    <h2>{{ article.author }}</h2>
+    <h3>
+      {{ article.createdAt | date:'dd/MM/yyyy HH:mm' }}h
+    </h3>
+    <div [innerHtml]="article.body | safeHtml" class="body"></div>
+  </div>
+  <br>
+  <div *ngIf="article.createdAt !== article.updatedAt">
+    <hr>
+    <p><b>Atualizado em:  {{ article.updatedAt | date:'dd/MM/yyyy HH:mm' }}h</b></p>
   </div>
 </mat-card>
+</div>
