--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,51 @@
-@import '~src/styles';
+@import "~src/styles";
 
 * {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: $primary-color;
+}
+
+h1 {
+  font-size: 1.9rem;
+  margin-bottom: 1.5rem;
+}
+
+h2, b {
+  font-size: 1.3rem;
+}
+
+h3 {
+  font-size: 1.1rem;
+  margin-bottom: 3rem;
+  color: $disabled-color;
+}
+
+b {
+  font-style: italic;
+  font-size: 1.1rem;
+}
+
+@media (max-width: 575px) {
+
+  .article {
+    max-width: 100%
+  }
+}
+
+@media (min-width: 576px) {
+
+  .article {
+    max-width: 50%
+  }
+}
+
+.body {
+  word-wrap: break-word;
 }
