Estilização home, categories

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<div class="bg-light main container-fluid p-0 pb-4 shadow">
-  <nav class="bg-light">
+<div class="bg-white main container-fluid p-0 pb-4 shadow">
+  <nav class="bg-white">
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a
         class="nav-link active pt-3"
