--- a/src/app/pages/admin/register/register.component.html
+++ b/src/app/pages/admin/register/register.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<mat-card class="bg-light container-fluid card shadow" style="margin-top: 75px">
+<mat-card class="bg-white container-fluid card shadow" style="margin-top: 75px">
   <mat-card-header class="d-flex justify-content-center">
     <mat-card-title>
       <h1>Cadastro</h1>
