--- a/src/app/pages/categories/articles-slug/articles-slug.component.html
+++ b/src/app/pages/categories/articles-slug/articles-slug.component.html
@@ -3,15 +3,15 @@
 <div style="padding-top: 40px">
 
   <mat-card
-  class="bg-light article container-fluid mt-3"
+  class="bg-white article container-fluid mt-3"
   *ngFor="let article of listArticles"
 >
   <div>
-    <h1>{{ article.title }}</h1>
-    <h2>{{ article.author }}</h2>
+    <h2>Por: {{ article.author }}</h2>
     <h3>
       {{ article.createdAt | date:'dd/MM/yyyy HH:mm' }}h
     </h3>
+    <h1>{{ article.title }}</h1>
     <div [innerHtml]="article.body | safeHtml" class="body"></div>
   </div>
   <br>
