--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -15,6 +15,7 @@ h3 {
 h1 {
   font-size: 1.9rem;
   margin-bottom: 1.5rem;
+
 }
 
 h2, b {
@@ -23,13 +24,15 @@ h2, b {
 
 h3 {
   font-size: 1.1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2.5rem;
   color: $disabled-color;
 }
 
 b {
   font-style: italic;
+  font-weight: 400;
   font-size: 1.1rem;
+  color: $disabled-color;
 }
 
 @media (max-width: 575px) {
