Correções em estilização e etc

--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<mat-card class="card w-75 container-fluid mt-5" >
+<mat-card class="card w-75 container-fluid mt-5 shadow">
   <h1>Categorias</h1>
   <br>
   <ul>
