--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 <br>
 <mat-card
-class="bg-white article w-75 container-fluid mt-3"
+class="card article w-75 container-fluid shadow mt-5"
 >
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, porro eveniet dolorem hic ut ratione ad nisi, voluptates praesentium aspernatur facere quae ab. Tenetur laudantium ex, officia totam laboriosam amet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos id omnis tenetur asperiores, rem sapiente modi ipsum beatae debitis hic cumque ea excepturi dolorum minima est quae iusto inventore libero.
+<h1>Sobre</h1>
+<br>
+Este é um blog genérico feito com nodejs e angular.
 </mat-card>
