--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="bg-white main container-fluid p-0 pb-4 shadow">
+<div class="bg-white main container-fluid p-0 shadow" style="margin-top: 40px; margin-bottom: 40px">
   <nav class="bg-white">
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a
