--- a/src/app/pages/admin/article/edit-article/edit-article.component.html
+++ b/src/app/pages/admin/article/edit-article/edit-article.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="card bg-white container-fluid mt-5 shadow">
+<div class="card bg-white container-fluid shadow" style="margin-top: 40px; margin-bottom: 40px">
   <form [formGroup]="articleForm">
     <mat-card>
       <br />
