--- a/src/app/pages/admin/article/preview-article/preview-article.component.html
+++ b/src/app/pages/admin/article/preview-article/preview-article.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
-<div style="padding-top: 40px">
+<div style="margin-top: 40px; margin-bottom: 40px">
 
   <mat-card
-  class="bg-white article container-fluid mt-3"
+  class="bg-white article container-fluid mt-3 shadow"
 >
   <div>
     <h2>Por: {{ article.author }}</h2>
