--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
-<div style="padding-top: 40px">
+<div style="margin-top: 40px; margin-bottom: 40px">
 
   <mat-card
-  class="bg-white article container-fluid mt-3"
+  class="bg-white article container-fluid mt-5 shadow"
   *ngFor="let article of listArticles"
 >
   <div>
